@@ -1,5 +1,5 @@
 [settings]
-shutdown_time = 0
+shutdown_time = 11
 
 [app]
 key1 = D:/windows_apps/Start.exe
