@@ -5,6 +5,5 @@ import platform
 
 if platform.system() == "Windows":
     import qt_windows
-
 elif  platform.system()=="Linux":
-    import qt_linux
+    print ("Linux is not supported yet!")
