@@ -1,0 +1,15 @@
+import win32api, win32ui
+
+def WindowExists(windowName):
+    try:
+        win32ui.FindWindow(None, windowName)
+    except win32ui.error:
+        return False
+    else:
+        return True
+
+if __name__ == '__main__':
+    if WindowExists ('System Tools by Napphuong'):
+        print ("yes")
+    else:
+        print ("no")
